--- a/Ex3_Neural_Network.ipynb
+++ b/Ex3_Neural_Network.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMJ3+IRqgisMOxrV41lsR/k",
+      "authorship_tag": "ABX9TyPcibDIJ74a/Ec9ad0uL7xY",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,32 +28,64 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "source": [
+        "!git clone https://github.com/jonbmartin/Gradient-Waveform-Errors-Demos\n",
+        "!cd Gradient-Waveform-Errors-Demos"
+      ],
       "metadata": {
-        "id": "sAJdJJ0hyaei",
-        "outputId": "8b0a66bc-b07b-4b9d-d3c0-2e8b23efd5d3",
+        "id": "VKInBfjT2_F7",
+        "outputId": "893fba7b-8443-44ab-e626-2297d1c034dc",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "placeholder\n"
+            "fatal: destination path 'Gradient-Waveform-Errors-Demos' already exists and is not an empty directory.\n"
           ]
         }
-      ],
-      "source": [
-        "print('placeholder')"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import sys\n",
+        "sys.path.insert(0,'/content/Gradient-Waveform-Errors-Demos')\n",
+        "sys.path.insert(0,'/content/Gradient-Waveform-Errors-Demos/utils/')"
+      ],
+      "metadata": {
+        "id": "wRHia0JB4LyW"
+      },
+      "execution_count": 10,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "Yp6olyJT5VRH"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from belief_network_util import *\n"
+      ],
+      "metadata": {
+        "id": "cVWxeJw14RLa"
+      },
+      "execution_count": 11,
+      "outputs": []
     },
     {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "VKInBfjT2_F7"
+        "id": "XuSAZUaq4SSd"
       },
       "execution_count": null,
       "outputs": []
