--- a/Ex3_Neural_Network.ipynb
+++ b/Ex3_Neural_Network.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNil/ROMJCF3e2n6rFYRFTR",
+      "authorship_tag": "ABX9TyPuuOE7w4dx42iGmWUrm+cp",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -36,7 +36,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "f5f46e3e-f171-4282-c36f-8c2576ee772f"
+        "outputId": "6684702c-e56e-4a73-ef19-e0479a33fc8d"
       },
       "execution_count": 1,
       "outputs": [
@@ -45,12 +45,12 @@
           "name": "stdout",
           "text": [
             "Cloning into 'Gradient-Waveform-Errors-Demos'...\n",
-            "remote: Enumerating objects: 57, done.\u001b[K\n",
-            "remote: Counting objects: 100% (57/57), done.\u001b[K\n",
-            "remote: Compressing objects: 100% (46/46), done.\u001b[K\n",
-            "remote: Total 57 (delta 18), reused 17 (delta 3), pack-reused 0 (from 0)\u001b[K\n",
-            "Receiving objects: 100% (57/57), 11.16 MiB | 7.66 MiB/s, done.\n",
-            "Resolving deltas: 100% (18/18), done.\n"
+            "remote: Enumerating objects: 64, done.\u001b[K\n",
+            "remote: Counting objects: 100% (64/64), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (50/50), done.\u001b[K\n",
+            "remote: Total 64 (delta 23), reused 21 (delta 6), pack-reused 0 (from 0)\u001b[K\n",
+            "Receiving objects: 100% (64/64), 11.17 MiB | 10.70 MiB/s, done.\n",
+            "Resolving deltas: 100% (23/23), done.\n"
           ]
         }
       ]
@@ -92,39 +92,10 @@
         "from custom_environments_belief import *\n"
       ],
       "metadata": {
-        "id": "cVWxeJw14RLa",
-        "outputId": "e7fd160d-c35f-4796-f9c7-1ab8a48cc595",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 486
-        }
+        "id": "cVWxeJw14RLa"
       },
-      "execution_count": 5,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "ModuleNotFoundError",
-          "evalue": "No module named 'util'",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-            "\u001b[0;32m/tmp/ipython-input-5-2996449431.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mbelief_network_util\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0;34m*\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 12\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mcustom_environments_belief\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0;34m*\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;32m/content/Gradient-Waveform-Errors-Demos/utils/custom_environments_belief.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mbelief_network_util\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0;34m*\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 10\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mutil\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mrandom_walk\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     11\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0msklearn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpreprocessing\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mnormalize\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'util'",
-            "",
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0;32m\nNOTE: If your import is failing due to a missing package, you can\nmanually install dependencies using either !pip or !apt.\n\nTo view examples of installing some common dependencies, click the\n\"Open Examples\" button below.\n\u001b[0;31m---------------------------------------------------------------------------\u001b[0m\n"
-          ],
-          "errorDetails": {
-            "actions": [
-              {
-                "action": "open_url",
-                "actionText": "Open Examples",
-                "url": "/notebooks/snippets/importing_libraries.ipynb"
-              }
-            ]
-          }
-        }
-      ]
+      "execution_count": 3,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -159,7 +130,7 @@
       "metadata": {
         "id": "vHmJ78HMmNDM"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -189,12 +160,6 @@
         "normalize = False\n",
         "buffer_length = int(50_000)\n",
         "\n",
-        "# set up identity environment - the initial belief system, that pulse is undistorted\n",
-        "initial_girf_env = GradEnvContBelief(g_ideal_m, scanner_girf, scanner_girf_t, gradient_model='girf',\n",
-        "                                 normalize=normalize, gmax=GMAX_CONSTRAINT, smax=SMAX_CONSTRAINT, apply_constraint=False,\n",
-        "                                 max_amplitude_range=[60, 120],)\n",
-        "initial_girf_env.reset()\n",
-        "\n",
         "# set up our TCN model! optimized hyperparameters:\n",
         "channel_sizes = [48] * 5 # temporal causal layer channels\n",
         "kernel_size = 16 # convolution kernel size\n",
@@ -218,8 +183,53 @@
         "belief_model = TCN(**model_params)\n",
         "belief_model.float() # TODO: this might cause things to go way more slowly (too precise)\n",
         "\n",
-        "belief_training_buffer = BeliefWindowBuffer(initial_girf_env.observation_space, initial_girf_env.action_space,\n",
-        "                                    buffer_length=buffer_length)\n",
+        "obs_space = 5\n",
+        "act_space = 1\n",
+        "belief_training_buffer = BeliefWindowBuffer(obs_space, act_space,\n",
+        "                                    buffer_length=buffer_length)\n"
+      ],
+      "metadata": {
+        "id": "xAueKkQGqXOG",
+        "outputId": "8ce22e4a-938a-4063-883f-982dbd090881",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 396
+        }
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Device to be used = cpu\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "/usr/local/lib/python3.11/dist-packages/torch/nn/utils/weight_norm.py:143: FutureWarning: `torch.nn.utils.weight_norm` is deprecated in favor of `torch.nn.utils.parametrizations.weight_norm`.\n",
+            "  WeightNorm.apply(module, name, dim)\n"
+          ]
+        },
+        {
+          "output_type": "error",
+          "ename": "AttributeError",
+          "evalue": "'int' object has no attribute 'shape'",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+            "\u001b[0;32m/tmp/ipython-input-6-1017906668.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     46\u001b[0m \u001b[0mobs_space\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m5\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     47\u001b[0m \u001b[0mact_space\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 48\u001b[0;31m belief_training_buffer = BeliefWindowBuffer(obs_space, act_space, \n\u001b[0m\u001b[1;32m     49\u001b[0m                                     buffer_length=buffer_length)\n",
+            "\u001b[0;32m/content/Gradient-Waveform-Errors-Demos/utils/custom_environments_belief.py\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, observation_space, action_space, buffer_length)\u001b[0m\n\u001b[1;32m     35\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     36\u001b[0m                 \u001b[0;32mfor\u001b[0m \u001b[0miter\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbuffer_length\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 37\u001b[0;31m                         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mobservation_v\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mzeros\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mobservation_space\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     38\u001b[0m                         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0maction_v\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mzeros\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0maction_space\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     39\u001b[0m                         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mobserved_error_v\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mAttributeError\u001b[0m: 'int' object has no attribute 'shape'"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "\n",
         "# Loading the NORMALIZED data with feature scale\n",
         "if axis == 'ax':\n",
@@ -251,7 +261,7 @@
         "    train_size = int(len(belief_training_buffer.observed_error_v) * train_test_split)\n",
         "    print(f'Train size = {train_size}' )\n",
         "    X_train, X_test, y_train, y_test = belief_training_buffer.return_X_Y_train_test(train_test_split=train_test_split,\n",
-        "                                             normalize=not data_normalized_flag, rl_env=initial_girf_env,\n",
+        "                                             normalize=not data_normalized_flag, rl_env=None,\n",
         "                                             feature_indices=feature_indices)\n",
         "\n",
         "    X_train, y_train = create_dataset(X_train, y_train, window_size=window_size, predict_point=predict_point,\n",
@@ -306,7 +316,7 @@
         "    print(f'Train size = {train_size}' )\n",
         "\n",
         "    X_train, X_test, y_train, y_test = belief_training_buffer.return_X_Y_train_test(train_test_split=train_test_split, normalize=not data_normalized_flag,\n",
-        "        rl_env=initial_girf_env, feature_indices=feature_indices)\n",
+        "        rl_env=None, feature_indices=feature_indices)\n",
         "\n",
         "\n",
         "    X_train, y_train = create_dataset(X_train, y_train, window_size=window_size, predict_point=predict_point,\n",
