--- a/Ex0_Characterization_Waveform_Design.ipynb
+++ b/Ex0_Characterization_Waveform_Design.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN8Xe23m5cCiyW9WxBfZpfG",
+      "authorship_tag": "ABX9TyPXi0PBa1JIaH6qDVFLG3VX",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -27,6 +27,19 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# Characterization Waveform Design\n",
+        "\n",
+        "Welcome! Our first demo is simply concerned with generating gradient waveforms that are useful for gradient system characterization.\n",
+        "\n",
+        "First, our imports..."
+      ],
+      "metadata": {
+        "id": "v-Pc1UfWNqxq"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "import matplotlib.pyplot as plt\n",
@@ -36,8 +49,18 @@
       "metadata": {
         "id": "QzqaHtGbWP7U"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Next, two functions to help extract important information about our gradient waveform, and plot quantities of interest such as our slew rate. Both functions\n",
+        "are adapted from Brian Hargeaves's MATLAB implementations."
+      ],
+      "metadata": {
+        "id": "K2bIE459OEld"
+      }
     },
     {
       "cell_type": "code",
@@ -63,7 +86,7 @@
         "        t   vector of time points (s)\n",
         "        v   voltage across coil.\n",
         "\n",
-        "    B.Hargreaves, Aug 2002.\n",
+        "    Adapted from B.Hargreaves's MATLAB implementation from Aug 2002.\n",
         "    \"\"\"\n",
         "\n",
         "    gamma = 4258  # Gamma (Gyromagnetic ratio in Hz/G)\n",
@@ -110,7 +133,7 @@
       "metadata": {
         "id": "AOMQuuUmaPnI"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -134,7 +157,7 @@
         "        t   vector of time points (s)\n",
         "        v   voltage across coil.\n",
         "\n",
-        "    Adapted from B.Hargreaves's MATLAB implementation, Aug 2002.\n",
+        "    Adapted from B.Hargreaves's MATLAB implementation from Aug 2002.\n",
         "    \"\"\"\n",
         "\n",
         "    gamma = 4258  # Gyromagnetic ratio in Hz/G\n",
@@ -308,12 +331,22 @@
       "metadata": {
         "id": "ESwROsDFaq5h"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Ok, now let's actually design some gradient waveforms. The first thing we'd like to do is design a slew rate constrained chirp. This will allow us to\n",
+        "characterize the gradient system response across frequencies without violating hardware constraints."
+      ],
+      "metadata": {
+        "id": "euJtpQ1gOZ9b"
+      }
+    },
+    {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": null,
       "metadata": {
         "id": "7GdKk2I7UeiI"
       },
@@ -383,6 +416,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Finally, let's just design a chirp and plot it, verifying that we do not violate slew rate constraints:"
+      ],
+      "metadata": {
+        "id": "4_FpnGFcOquc"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "\n",
@@ -409,7 +451,7 @@
         "id": "jrXwpeJjWOZH",
         "outputId": "c4d63fbe-26f9-45c8-d7d0-0c1bbae38ee0"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
