--- a/Ex3_Neural_Network.ipynb
+++ b/Ex3_Neural_Network.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyMbspyDf1Bbl8bz5F94GKUf",
+      "authorship_tag": "ABX9TyPBwMqqICQ8cy2nWb8Y02zJ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -31,6 +31,18 @@
     {
       "cell_type": "markdown",
       "source": [
+        "# Exercise 3: Neural Network Based Correction\n",
+        "\n",
+        "This final exercise shows how to use neural networks in Python to model gradient distortions. As you will see, this requires more effort than our previous linear corrections, so is probably most ideal for systems with pronounced distortions or on which the user desires to use extremely demanding gradient waveforms.\n",
+        "\n",
+        "See the following reference:\n",
+        "\n",
+        "1.   Martin JB, Alderson HE, Gore JC, Does MD, Harkins KD. Improved Image Reconstruction and Diffusion Parameter Estimation Using a Temporal Convolutional Network Model of Gradient Trajectory Errors. [preprint]. 2025 June. Available from: https://arxiv.org/abs/2506.14995. doi: 10.48550/arXiv.2506.14995.\n",
+        "\n",
+        "Google Colab gives us access to a GPU - let's make sure we use it! Prior to running this notebook, make sure you are in a GPU runtime by navigating from the top toolbar **Runtime -> Change Runtime Type**, and selecting **T4 GPU**.\n",
+        "\n",
+        "\n",
+        "\n",
         "First, we'll add the utility and data files, which contain some training functions and the scanner data, to our local runtime via git:"
       ],
       "metadata": {
@@ -49,7 +61,7 @@
         },
         "outputId": "808e941d-1c2d-4234-f731-9f147cf29ce4"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -76,7 +88,7 @@
       "metadata": {
         "id": "wRHia0JB4LyW"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -105,7 +117,7 @@
       "metadata": {
         "id": "cVWxeJw14RLa"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -120,7 +132,7 @@
       "metadata": {
         "id": "XuSAZUaq4SSd"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -142,7 +154,7 @@
       "metadata": {
         "id": "vHmJ78HMmNDM"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -203,7 +215,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -309,7 +321,7 @@
           "height": 1000
         }
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -415,7 +427,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -462,7 +474,7 @@
         },
         "outputId": "1a4f68a2-1dde-40b7-e534-6228e0f70974"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -517,7 +529,7 @@
       "metadata": {
         "id": "kcHcrJF1tDc0"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     }
   ]
