--- a/Ex0_Characterization_Waveform_Design.ipynb
+++ b/Ex0_Characterization_Waveform_Design.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPqQ+AOTim0t1EFZQkk/eTE",
+      "authorship_tag": "ABX9TyMPo+/AcFO99BIN479vTRtm",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -49,7 +49,7 @@
       "metadata": {
         "id": "QzqaHtGbWP7U"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -85,6 +85,9 @@
         "        m2  second moment trajectory (s^2/cm)\n",
         "        t   vector of time points (s)\n",
         "        v   voltage across coil.\n",
+        "\n",
+        "    #JBM TODO: Really just need to show kspace, gradient, slew for the purposes\n",
+        "    # here. could make an option that is default false\n",
         "\n",
         "    Adapted from B.Hargreaves's MATLAB implementation from Aug 2002.\n",
         "    \"\"\"\n",
@@ -133,7 +136,7 @@
       "metadata": {
         "id": "AOMQuuUmaPnI"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -331,7 +334,7 @@
       "metadata": {
         "id": "ESwROsDFaq5h"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -346,7 +349,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "id": "7GdKk2I7UeiI"
       },
@@ -451,7 +454,7 @@
         "id": "jrXwpeJjWOZH",
         "outputId": "d7715416-33ed-46af-81a6-4add2970f297"
       },
-      "execution_count": 56,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -528,7 +531,7 @@
       "metadata": {
         "id": "QAzUXomekXZj"
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -551,7 +554,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 59,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -575,7 +578,7 @@
           "height": 1000
         }
       },
-      "execution_count": 60,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
